--- a/Project.toml
+++ b/Project.toml
@@ -2,7 +2,7 @@
 FFTViews = "4f61f5a4-77b1-5117-aa51-3ab5ef4ef0cd"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
+LinearMapsAA = "599c1a8e-b958-11e9-0d14-b1e6b2ecea07"
 MIRT = "7035ae7a-3787-11e9-139a-5545ed3dc201"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
